update test on DAOs